// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LandingCTA > renders basic case correctly 1`] = `
"<div class="rounded-xl divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900 relative">
  <!--v-if-->
  <div class="flex flex-col gap-16 sm:gap-y-24 px-4 sm:p-6 py-24 sm:py-32 sm:px-16">
    <div class="text-center">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`LandingCTA > renders with props correctly 1`] = `
"<div class="rounded-xl divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900 relative">
  <!--v-if-->
  <div class="flex flex-col gap-16 sm:gap-y-24 px-4 sm:p-6 py-24 sm:py-32 sm:px-16">
    <div class="text-center">
      <h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-4xl">title</h2>
      <p class="mt-6 text-lg/8 text-gray-600 dark:text-gray-300">description</p>
      <div class="mt-10 flex items-center gap-x-6 justify-center"><button type="button" class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-2 px-3 py-2 shadow-sm ring-1 ring-inset ring-gray-300 dark:ring-gray-700 text-gray-700 dark:text-gray-200 bg-gray-50 hover:bg-gray-100 disabled:bg-gray-50 dark:bg-gray-800 dark:hover:bg-gray-700/50 dark:disabled:bg-gray-800 focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center">
          <!--v-if--><span class="">Get started</span>
          <!--v-if-->
        </button><button type="button" class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-2 px-3 py-2 text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 underline-offset-4 hover:underline focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center">
          <!--v-if--><span class="">Learn more</span><span class="i-heroicons-arrow-right-20-solid flex-shrink-0 h-5 w-5" aria-hidden="true"></span>
        </button></div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`LandingCTA > renders with slots correctly 1`] = `
"<div class="rounded-xl divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900 relative">
  <!--v-if-->
  <div class="flex flex-col gap-16 sm:gap-y-24 px-4 sm:p-6 py-24 sm:py-32 sm:px-16">
    <div class="text-center">
      <h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-4xl">Title slot</h2>
      <p class="mt-6 text-lg/8 text-gray-600 dark:text-gray-300">Description slot</p>
      <div class="mt-10 flex items-center gap-x-6 justify-center">Links slot</div>
    </div>default
  </div>
  <!--v-if-->
</div>"
`;
